--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --main-title-color-: #e6ba8d;
+  --main-text-color-: #d2d2d2;
+  --box-shadow-: 0px 5px 50px 10px rgba(0, 0, 0, 0.2);
+  --main-divider-color-: #e6ba8d;
+--main-bg-color-: #1F2E3F;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: Montserrat,"Helvetica Neue";
+  font-weight:  600;
+  margin: 0;
+  padding: 0;
 }
+html {
+  box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-color: var(--main-bg-color-);
+  overflow-x: hidden;
+}
+.title{
+  color: var(--main-title-color-)
+}
+.text {
+  color: var(--main-text-color-);
+}
+.title {
+  font-size: 40px;
+  line-height: 49px;
+}
+.text {
+  font-size: 18px;
+  line-height: 22px;
+}
+.img {
+  box-shadow: var(--box-shadow-);
+}
+*:focus {
+  outline: 0;
+  box-shadow: 0 0 0 4px rgba(41, 80, 147, 0.4);
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* CONTAINER */
+.container {
+  max-width: 1440px;
+  padding: 0 80px;
+  margin: 0 auto;
+}
+/* Header */
