--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,12 @@
   --main-text-color-: #d2d2d2;
   --box-shadow-: 0px 5px 50px 10px rgba(0, 0, 0, 0.2);
   --main-divider-color-: #e6ba8d;
---main-bg-color-: #1F2E3F;
+  --main-bg-color-: #1f2e3f;
 }
 
 * {
-  font-family: Montserrat,"Helvetica Neue";
-  font-weight:  600;
+  font-family: Montserrat, "Helvetica Neue";
+  font-weight: 600;
   margin: 0;
   padding: 0;
 }
@@ -30,8 +30,8 @@ body {
   background-color: var(--main-bg-color-);
   overflow-x: hidden;
 }
-.title{
-  color: var(--main-title-color-)
+.title {
+  color: var(--main-title-color-);
 }
 .text {
   color: var(--main-text-color-);
@@ -69,7 +69,11 @@ img {
 /* CONTAINER */
 .container {
   max-width: 1440px;
-  padding: 0 80px;
+  padding: 0 133px;
   margin: 0 auto;
 }
 /* Header */
+.headerTopText {
+  font-size: 16px;
+  line-height: 20px;
+}
