--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,19 +31,21 @@ body {
   overflow-x: hidden;
 }
 .title {
-  color: var(--main-title-color-);
-}
-.text {
-  color: var(--main-text-color-);
-}
-.title {
   font-size: 40px;
   line-height: 49px;
+  text-transform: uppercase;
+  color: var(--main-title-color-);
 }
+.list {
+  list-style-type: none;
+}
+
 .text {
   font-size: 18px;
   line-height: 22px;
+  color: var(--main-text-color-);
 }
+
 .img {
   box-shadow: var(--box-shadow-);
 }
